--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="text">
                     <strong>HTML5</strong><br> Rigoberto
                 </span>
-                <span class="icon-css">
+                <span class="punto">
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </span>
             </div>
