--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             
             <div class="header">
                 <span class="icon-css"><i class="fa-brands fa-html5"></i></span>
-                <span class="text"> <strong>HTML5</strong><br> Rigoberto</span>
-                <span class="icon-css"><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                <span class="text"> <strong>HTML5</strong><br>Rigoberto</span>
+                <span class="punto"><i class="fa-solid fa-ellipsis-vertical"></i></span>
             </div>    
        
             <div class="img">
